对照Apifox的新接口文档，进行改造与测试，方向推荐组别的后三个接口还修正